--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,10 @@
 {% load staticfiles %}
 <html lang="en">
 <head>
-	<title>NelNorris</title>
+	<title>
+		{% block title %}
+		{% endblock %}
+	</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1">
@@ -36,7 +39,7 @@
 </head>
 <body>
 	<div class="bamboo"></div>
-	<div class="container-fluid">
+	<div class="container-fluid main">
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="row">
@@ -46,10 +49,16 @@
 					<ul class="nav navbar-nav">
 						<li><a href="/blog">Blog</a></li>
 						<li><a href="/doodle">2014 Doodle</a></li>
+						<li><a href="/archive">Post Archive</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+		<header>
+			<div class="container">
+				<div class="row">
+					{% block pagetitle %}
+					{% endblock %}
 		<main>
 			<div class="container">
 				<div class="row">
@@ -58,6 +67,18 @@
 				</div>
 			</div>
 		</main>
+		<footer>
+			<div class="container-fluid">
+				<div class="row">
+					<p class="social">
+						<a href="https://twitter.com/NelNorris" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" title="LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+						<a href="https://github.com/NelNorris" title="Github" target="_blank"><i class="fa fa-github-alt"></i></a>
+						<a href="https://soundcloud.com/nellie-norris" title="Soundcloud" target="_blank"><i class="fa fa-soundcloud"></i></a>
+					</p>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
