--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,13 @@
 {% extends 'home/index.html' %}
 
+{% block title %}
+	Blog | Nel Norris
+{% endblock %}
+
+{% block pagetitle %}
+	<h1>Blog</h1>
+{% endblock %}
+
 {% block content %}
 	<div class="post">
 		<h3>{{ post.title }}</h3>
@@ -8,6 +16,6 @@
 		{% endif %}
 		{{ post.text|safe }}
 		<br />
-		<p class="return"><a href="/blog">Back to blog</a></p>
+		<p class="return"><a href="/blog">Back to blog &nbsp; <i class="fa fa-angle-double-right"></i></a></p>
 	</div>
 {% endblock %}
