--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,13 @@
 {% extends 'home/index.html' %}
 
+{% block title %}
+	Blog | Nel Norris
+{% endblock %}
+
+{% block pagetitle %}
+	<h1>Blog</h1>
+{% endblock %}
+
 {% block content %}
 	{% for post in posts %}
 		<div class="post">
