altered home page content

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,23 +9,10 @@
 {% endblock %}
 
 {% block content %}
-	<div class="col-xs-12 col-sm-8 about">
+	<div class="col-xs-12 about">
 		<h2>About</h2>
 		<p>I am a British front-end developer in Singapore. My degree is in music and my hobbies are painting and weight lifting. See my blog for musings on web development, films, and videogames.</p>
-	</div>
-	<div class="col-xs-12 col-sm-4">
-		<div class="social">
-			<p><a href="https://twitter.com/NelNorris" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></p>
-		</div>
-		<div class="social">
-			<p><a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a></p>
-		</div>
-		<div class="social">
-			<p><a href="https://github.com/NelNorris" target="_blank"><i class="fa fa-github-alt"></i> Github</a></p>
-		</div>
-		<div class="social">
-			<p><a href="https://soundcloud.com/nellie-norris" target="_blank"><i class="fa fa-soundcloud"></i> Soundcloud</a></p>
-		</div>
+		<p>I made this website primarily using a <a href="https://djangogirls.org/" target="_blank">Django Girls</a> tutorial. They aim to help women get into tech and host workshops all over the world. They're volunteer-run and do good work, so please consider checking them out and donating to the organisation.</p>
 	</div>
 	<div class="col-xs-12 update">
 		<h2>Latest</h2>
