--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="{% static 'style.css' %}">
+	<link rel="stylesheet" href="{% static 'style/style.css' %}">
 	<link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 	<link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
 	<link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-icon-72x72.png' %}">
@@ -44,13 +44,18 @@
 			<div class="container">
 				<div class="row">
 					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+					    	<i class="fa fa-angle-down"></i>
+					    </button>
 						<a class="navbar-brand" href="/" title="Home">NelNorris.com</a>
 					</div>
-					<ul class="nav navbar-nav">
-						<li><a href="/blog">Blog</a></li>
-						<li><a href="/doodle">2014 Doodle</a></li>
-						<li><a href="/archive">Post Archive</a></li>
-					</ul>
+					<div class="collapse navbar-collapse" id="navbar">
+						<ul class="nav navbar-nav">
+							<li><a href="/blog">Blog</a></li>
+							<li><a href="/doodle">2014 Doodle</a></li>
+							<li><a href="/archive">Post Archive</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</nav>
@@ -59,8 +64,11 @@
 				<div class="row">
 					{% block pagetitle %}
 					{% endblock %}
+				</div>
+			</div>
+		</header>
 		<main>
-			<div class="container">
+			<div class="container content">
 				<div class="row">
 					{% block content %}
 					{% endblock %}
