--- a/home/static/style/_blog.scss
+++ b/home/static/style/_blog.scss
@@ -15,6 +15,9 @@
 		font-size: $ml_font;
 		font-weight: bold;
 	}
+	h4 {
+		margin-top: 2em;
+	}
 	img {
 		max-width: 500px;
 		margin: 0 auto $m_space;
