new blog post, back to bootstrap3

--- a/home/static/style/_main.scss
+++ b/home/static/style/_main.scss
@@ -83,6 +83,10 @@ html {
 			color: $subheadlight;
 			margin-bottom: $xxs_space;
 		}
+		.small {
+			font-size: $s_font;
+			margin-top: $xxs_space;
+		}
 	}
 }
 
