--- a/home/static/style/_mobile.scss
+++ b/home/static/style/_mobile.scss
@@ -68,6 +68,10 @@
 			padding-top: $xxl_space;
 		}
 		.post {
+			header {
+				background: transparent;
+				border-bottom: 0;
+			}
 			.return {
 				a {
 					background-color: $anchoraccent;
