--- a/home/static/style/_variables.scss
+++ b/home/static/style/_variables.scss
@@ -3,16 +3,16 @@
 $pandablack: #000000;
 $backgroundcolour: #ffffff;
 $maintextcolour: #333333;
-$articlecolour: #a1a1a1;
-$articlelight: #a5a5a5;
-$subheadcolour: #666666;
-$subheadlight: #868686;
-$subheaddark: #00994d;
+$articlecolour: #616161;
+$articlelight: #717171;
+$subheadcolour: #444444;
+$subheadlight: #666666;
+$subheaddark: #008040;
 $brandcolour: #00b32d;
 $brandlight: #1b1b7e;
 $contrastcolour: #f2e6d9;
 $contrastdark: #d2a679;
-$anchorcolour: #b77534;
+$anchorcolour: #8b5927;
 $anchoraccent: #3434b7;
 $bordercolour: #e7e7e7;
 $translucent: rgba(225,225,225,0.5);
@@ -24,14 +24,14 @@ $brandtext: Lobster, courier, cursive;
 $subhead: Karla, courier, serif;
 
 // Font size
-$xs_font: 0.6em;
-$s_font: 0.7em;
-$m_font: 1em;
-$mm_font: 1.1em;
-$mmm_font: 1.2em;
-$ml_font: 1.5em;
-$l_font: 1.8em;
-$xl_font: 2em;
+$xs_font: 0.8em;
+$s_font: 1em;
+$m_font: 1.2em;
+$mm_font: 1.3em;
+$mmm_font: 1.5em;
+$ml_font: 1.8em;
+$l_font: 2em;
+$xl_font: 2.4em;
 $xxl_font: 2.8em;
 
 // Spacing
