--- a/home/static/style/style.css
+++ b/home/static/style/style.css
@@ -31,7 +31,7 @@ html body .container .row {
   width: 100%;
   max-width: 750px;
   height: auto;
-  margin: 1em auto;
+  margin: 1.2em auto;
 }
 html body .bamboo {
   position: fixed;
@@ -60,33 +60,36 @@ html body h1, html body h2 {
 }
 html body a {
   text-decoration: none;
-  color: #b77534;
+  color: #8b5927;
 }
 html body a:hover {
   text-decoration: none;
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 html body a:focus {
   text-decoration: none;
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 html body a:active {
   text-decoration: none;
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 html body .emph {
   text-transform: uppercase;
 }
 html body .date {
-  font-size: 0.7em;
-  color: #868686;
+  font-size: 1em;
+  color: #666666;
   margin-bottom: 4px;
 }
 html body .small {
-  font-size: 0.7em;
+  font-size: 1em;
   margin-top: 4px;
 }
 
@@ -118,30 +121,39 @@ nav.navbar.navbar-default .container .row .navbar-nav {
 nav.navbar.navbar-default .container .row .navbar-nav a {
   line-height: 40px;
   font-family: Josefin Slab, courier, serif;
-  color: #666666;
+  color: #444444;
   text-transform: uppercase;
   font-weight: bold;
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:hover {
-  color: #1b1b7e;
+  color: #3434b7;
+  transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:focus {
-  color: #1b1b7e;
+  color: #3434b7;
+  transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:active {
-  color: #1b1b7e;
+  color: #3434b7;
+  transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-brand:focus {
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-brand:hover {
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-brand:active {
   color: #3434b7;
   transition: color 0.35s;
+  -webkit-transition: color 0.35s;
 }
 
 main {
@@ -165,25 +177,25 @@ footer {
   bottom: 0;
   right: 0;
   width: 100%;
-  margin-top: 1em;
+  margin-top: 1.2em;
 }
 footer .social {
   text-align: center;
 }
 footer .social:first-child {
-  margin-top: 2em;
+  margin-top: 2.4em;
 }
 footer .social p {
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 footer .social i {
-  margin-right: 1em;
-  font-size: 1.8em;
+  margin-right: 1.2em;
+  font-size: 2em;
 }
 
 .post {
   padding: 10px 0;
-  border-top: 1px solid #666666;
+  border-top: 1px solid #444444;
 }
 .post:first-child {
   border-top: 0;
@@ -191,12 +203,12 @@ footer .social i {
 .post h2 {
   font-family: Karla, courier, serif;
   text-align: left;
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-bottom: 0;
 }
 .post h3 {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.8em;
   font-weight: bold;
 }
 .post h4 {
@@ -213,8 +225,8 @@ footer .social i {
   margin-bottom: 8px;
 }
 .post .caption {
-  font-size: 0.7em;
-  color: #868686;
+  font-size: 1em;
+  color: #666666;
   text-align: center;
   font-style: italic;
 }
@@ -241,7 +253,7 @@ footer .social i {
   color: #ffffff;
 }
 .post .return i {
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 
 .doodle {
@@ -264,7 +276,7 @@ footer .social i {
   position: absolute;
   width: 100%;
   bottom: 0;
-  margin: 1.8em auto;
+  margin: 2em auto;
 }
 .doodle #picture {
   width: auto;
@@ -276,7 +288,7 @@ footer .social i {
 }
 .doodle .arrow-container {
   width: 100%;
-  color: #00994d;
+  color: #008040;
   margin: 10px auto;
 }
 .doodle .arrow-container .arrow {
@@ -294,13 +306,13 @@ footer .social i {
 }
 .doodle .calendar {
   margin: 0 auto;
-  font-size: 0.6em;
-  color: #a1a1a1;
+  font-size: 0.8em;
+  color: #616161;
   font-weight: bold;
 }
 .doodle .calendar td {
   padding: 5px 0 10px;
-  margin: 2em;
+  margin: 2.4em;
   border-bottom: 1px solid #e7e7e7;
   cursor: pointer;
   opacity: 0.25;
@@ -366,27 +378,27 @@ footer .social i {
   left: 6600px;
 }
 .doodle .calendar-display .calendar-scroll .month h3 {
-  margin-bottom: 1em;
+  margin-bottom: 1.2em;
   cursor: pointer;
 }
 .doodle .calendar-list {
   position: relative;
   list-style: none;
-  padding: 1em 0;
+  padding: 1.2em 0;
 }
 .doodle .calendar-list li {
   display: inline;
   margin-right: 8px;
-  font-size: 0.7em;
+  font-size: 1em;
   font-weight: bold;
   text-transform: uppercase;
-  color: #a5a5a5;
+  color: #717171;
 }
 .doodle .calendar-list li.active {
-  color: #666666;
+  color: #444444;
 }
 .doodle .calendar-list #calendar-prev, .doodle .calendar-list #calendar-next {
-  font-size: 2em;
+  font-size: 2.4em;
 }
 
 .update {
@@ -398,13 +410,13 @@ footer .social i {
 }
 .update h3 {
   text-align: left;
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-bottom: 0;
 }
 
 .archive {
   padding: 10px;
-  border-top: 1px solid #666666;
+  border-top: 1px solid #444444;
 }
 .archive:first-child {
   border-top: 0;
@@ -412,7 +424,7 @@ footer .social i {
 .archive h2 {
   font-family: Karla, courier, serif;
   text-align: left;
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-bottom: 0;
 }
 
@@ -425,7 +437,7 @@ footer .social i {
     background: transparent;
     padding: 12px 10px;
     margin-top: 10px;
-    margin-right: 1em;
+    margin-right: 1.2em;
     margin-bottom: 0;
     transform: rotate(0deg);
     transition: transform 0.7s;
@@ -473,7 +485,7 @@ footer .social i {
     border-radius: 0;
     border: 0;
     background: transparent;
-    padding: 0.6em;
+    padding: 0.8em;
   }
   main .update {
     padding-top: 40px;
@@ -492,10 +504,10 @@ footer .social i {
     height: auto;
   }
   main .post .caption {
-    font-size: 1em;
+    font-size: 1.2em;
   }
   main .doodle .panel {
-    padding: 1em;
+    padding: 1.2em;
   }
   main .doodle .calendar-display {
     display: none;
@@ -503,7 +515,7 @@ footer .social i {
 }
 @media screen and (max-width: 576px) {
   nav.navbar.navbar-default .container .row .navbar-header .navbar-brand {
-    font-size: 2em;
+    font-size: 2.4em;
   }
 }
 
