--- a/home/static/style/_variables.scss
+++ b/home/static/style/_variables.scss
@@ -12,7 +12,7 @@ $brandcolour: #00b32d;
 $brandlight: #1b1b7e;
 $contrastcolour: #f2e6d9;
 $contrastdark: #d2a679;
-$anchorcolour: #8b5927;
+$anchorcolour: #a36629;
 $anchoraccent: #3434b7;
 $bordercolour: #e7e7e7;
 $translucent: rgba(225,225,225,0.5);
@@ -24,12 +24,12 @@ $brandtext: Lobster, courier, cursive;
 $subhead: Karla, courier, serif;
 
 // Font size
-$xs_font: 0.8em;
-$s_font: 1em;
-$m_font: 1.2em;
-$mm_font: 1.3em;
-$mmm_font: 1.5em;
-$ml_font: 1.8em;
+$xs_font: 0.6em;
+$s_font: 0.7em;
+$m_font: 1em;
+$mm_font: 1.1em;
+$mmm_font: 1.2em;
+$ml_font: 1.5em;
 $l_font: 2em;
 $xl_font: 2.4em;
 $xxl_font: 2.8em;
