--- a/home/static/style/_update.scss
+++ b/home/static/style/_update.scss
@@ -2,7 +2,7 @@
 	margin-top: $xxl_space;
 	border-top: $border_thin solid $contrastcolour;
 	h2 {
-		margin-top: 0;
+		margin-top: $xxl_space;
 	}
 	h3 {
 		text-align: left;
