--- a/home/static/style/style.css
+++ b/home/static/style/style.css
@@ -31,7 +31,7 @@ html body .container .row {
   width: 100%;
   max-width: 750px;
   height: auto;
-  margin: 1.2em auto;
+  margin: 1em auto;
 }
 html body .bamboo {
   position: fixed;
@@ -45,6 +45,7 @@ html body .bamboo {
 }
 html body p, html body li {
   font-family: Lato, verdana, sans-serif;
+  line-height: 1.2em;
 }
 html body h1 {
   font-family: Josefin Slab, courier, serif;
@@ -60,7 +61,7 @@ html body h1, html body h2 {
 }
 html body a {
   text-decoration: none;
-  color: #8b5927;
+  color: #a36629;
 }
 html body a:hover {
   text-decoration: none;
@@ -84,12 +85,12 @@ html body .emph {
   text-transform: uppercase;
 }
 html body .date {
-  font-size: 1em;
+  font-size: 0.7em;
   color: #666666;
-  margin-bottom: 4px;
+  margin-bottom: 10px;
 }
 html body .small {
-  font-size: 1em;
+  font-size: 0.7em;
   margin-top: 4px;
 }
 
@@ -127,16 +128,19 @@ nav.navbar.navbar-default .container .row .navbar-nav a {
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:hover {
   color: #3434b7;
+  text-decoration: underline;
   transition: color 0.35s;
   -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:focus {
   color: #3434b7;
+  text-decoration: underline;
   transition: color 0.35s;
   -webkit-transition: color 0.35s;
 }
 nav.navbar.navbar-default .container .row .navbar-nav a:active {
   color: #3434b7;
+  text-decoration: underline;
   transition: color 0.35s;
   -webkit-transition: color 0.35s;
 }
@@ -177,7 +181,7 @@ footer {
   bottom: 0;
   right: 0;
   width: 100%;
-  margin-top: 1.2em;
+  margin-top: 1em;
 }
 footer .social {
   text-align: center;
@@ -186,10 +190,10 @@ footer .social:first-child {
   margin-top: 2.4em;
 }
 footer .social p {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 footer .social i {
-  margin-right: 1.2em;
+  margin-right: 1em;
   font-size: 2em;
 }
 
@@ -203,12 +207,12 @@ footer .social i {
 .post h2 {
   font-family: Karla, courier, serif;
   text-align: left;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-bottom: 0;
 }
 .post h3 {
   text-align: center;
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-weight: bold;
 }
 .post h4 {
@@ -225,7 +229,7 @@ footer .social i {
   margin-bottom: 8px;
 }
 .post .caption {
-  font-size: 1em;
+  font-size: 0.7em;
   color: #666666;
   text-align: center;
   font-style: italic;
@@ -253,7 +257,7 @@ footer .social i {
   color: #ffffff;
 }
 .post .return i {
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 .doodle {
@@ -306,7 +310,7 @@ footer .social i {
 }
 .doodle .calendar {
   margin: 0 auto;
-  font-size: 0.8em;
+  font-size: 0.6em;
   color: #616161;
   font-weight: bold;
 }
@@ -378,18 +382,18 @@ footer .social i {
   left: 6600px;
 }
 .doodle .calendar-display .calendar-scroll .month h3 {
-  margin-bottom: 1.2em;
+  margin-bottom: 1em;
   cursor: pointer;
 }
 .doodle .calendar-list {
   position: relative;
   list-style: none;
-  padding: 1.2em 0;
+  padding: 1em 0;
 }
 .doodle .calendar-list li {
   display: inline;
   margin-right: 8px;
-  font-size: 1em;
+  font-size: 0.7em;
   font-weight: bold;
   text-transform: uppercase;
   color: #717171;
@@ -406,11 +410,11 @@ footer .social i {
   border-top: 1px solid #f2e6d9;
 }
 .update h2 {
-  margin-top: 0;
+  margin-top: 40px;
 }
 .update h3 {
   text-align: left;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-bottom: 0;
 }
 
@@ -424,7 +428,7 @@ footer .social i {
 .archive h2 {
   font-family: Karla, courier, serif;
   text-align: left;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-bottom: 0;
 }
 
@@ -437,7 +441,7 @@ footer .social i {
     background: transparent;
     padding: 12px 10px;
     margin-top: 10px;
-    margin-right: 1.2em;
+    margin-right: 1em;
     margin-bottom: 0;
     transform: rotate(0deg);
     transition: transform 0.7s;
@@ -485,7 +489,7 @@ footer .social i {
     border-radius: 0;
     border: 0;
     background: transparent;
-    padding: 0.8em;
+    padding: 0.6em;
   }
   main .update {
     padding-top: 40px;
@@ -504,10 +508,10 @@ footer .social i {
     height: auto;
   }
   main .post .caption {
-    font-size: 1.2em;
+    font-size: 1em;
   }
   main .doodle .panel {
-    padding: 1.2em;
+    padding: 1em;
   }
   main .doodle .calendar-display {
     display: none;
