blog post title

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'home/index.html' %}
 
 {% block title %}
-	Blog | Nel Norris
+	{{ post.title }} | Nel Norris
 {% endblock %}
 
 {% block pagetitle %}
