--- a/home/static/style/_main.scss
+++ b/home/static/style/_main.scss
@@ -43,7 +43,7 @@ html {
 		}
 		p, li {
 			font-family: $bodytext;
-			line-height: $mmm_font;
+			line-height: $ml_font;
 		}
 		h1 {
 			font-family: $headtext;
