favicon fix, br tag in edge fix

--- a/home/static/style/_main.scss
+++ b/home/static/style/_main.scss
@@ -79,6 +79,9 @@ html {
 				-webkit-transition: color 0.35s;
 			}
 		}
+		br {
+			font-family: sans-serif;
+		}
 		.emph {
 			text-transform: uppercase;
 		}
