--- a/home/static/style/_mobile.scss
+++ b/home/static/style/_mobile.scss
@@ -4,6 +4,7 @@
 		.container {
 			.row {
 				.navbar-header {
+					padding-left: 80px;
 					.navbar-toggle {
 						border: 0;
 						background: transparent;
