it's been a while so I can't remember what I did

--- a/home/static/style/_main.scss
+++ b/home/static/style/_main.scss
@@ -177,7 +177,7 @@ main {
 		background: $translucent;
 		border-radius: $m_space;
 		border: $border_thick solid $bordercolour;
-		margin: $xxl_space auto $big_space;
+		margin: 0 auto $big_space;
 		padding: 0 $xxl_space $xxl_space;
 	}
 }
