--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,7 +25,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'icon/apple-icon-180x180.png' %}">
 	<link rel="icon" type="image/x-icon' %}" href="{% static 'favicon.ico">
 	<link rel="manifest" href="{% static 'icon/manifest.json' %}">
-	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileColor" content="#00b32d">
 	<meta name="msapplication-TileImage" content="{% static 'icon/ms-icon-144x144.png' %}">
 	<meta name="theme-color" content="#ffffff">
 </head>
@@ -71,10 +71,10 @@
 			<div class="container-fluid">
 				<div class="row">
 					<p class="social">
-						<a href="https://twitter.com/NelNorris" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-						<a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" title="LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-						<a href="https://github.com/NelNorris" title="Github" target="_blank"><i class="fa fa-github-alt"></i></a>
-						<a href="https://soundcloud.com/nellie-norris" title="Soundcloud" target="_blank"><i class="fa fa-soundcloud"></i></a>
+						<a href="https://twitter.com/NelNorris" title="Twitter" aria-label="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" title="LinkedIn" aria-label="LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+						<a href="https://github.com/NelNorris" title="Github" aria-label="Github" target="_blank"><i class="fa fa-github-alt"></i></a>
+						<a href="https://soundcloud.com/nellie-norris" title="Soundcloud" aria-label="Soundcloud" target="_blank"><i class="fa fa-soundcloud"></i></a>
 					</p>
 				</div>
 			</div>
